# Fuzzing

./: .gitignore.txt  README.md  README.md.txt  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
notebooks/: fuzzing_experiments.ipynb
scripts/: run_eval.py
src/fuzzlab/: evaluation.py  fuzzers.py  targets.py
tests/: test_mutations.py  test_targets.py
